--- a/build-tools/scripts/PrepareWindows.targets
+++ b/build-tools/scripts/PrepareWindows.targets
@@ -3,22 +3,23 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <_TopDir>$(MSBuildThisFileDirectory)..\..</_TopDir>
-    <_NuGetUri>https://dist.nuget.org/win-x86-commandline/v4.7.1/nuget.exe</_NuGetUri>
+    <_NuGetUri>https://dist.nuget.org/win-x86-commandline/v5.4.0/nuget.exe</_NuGetUri>
     <_NuGetPath>$(_TopDir)\.nuget</_NuGetPath>
     <_NuGet>$(_NuGetPath)\NuGet.exe</_NuGet>
   </PropertyGroup>
   <Import Project="$(_TopDir)\Configuration.props" />
-  <UsingTask AssemblyFile="$(_TopDir)\bin\Build$(Configuration)\Java.Interop.BootstrapTasks.dll" TaskName="Java.Interop.BootstrapTasks.JdkInfo" />
-  <UsingTask AssemblyFile="$(_TopDir)\bin\Build$(Configuration)\Java.Interop.BootstrapTasks.dll" TaskName="Java.Interop.BootstrapTasks.DownloadUri" />
+  <Import Project="$(_TopDir)\build-tools\tasks\DownloadUri.targets" />
+  <Import Project="$(_TopDir)\build-tools\tasks\JdkInfo.targets" />
   <Target Name="Prepare">
     <Exec Command="git submodule update --init --recursive" WorkingDirectory="$(_TopDir)" />
-    <MSBuild Projects="$(MSBuildThisFileDirectory)..\..\build-tools\Java.Interop.BootstrapTasks\Java.Interop.BootstrapTasks.csproj" />
-    <MakeDir Directories="$(_NuGetPath)" />
     <DownloadUri
         SourceUris="$(_NuGetUri)"
         DestinationFiles="$(_NuGet)"
     />
-    <Exec Command="$(_NuGet) restore Mono.Cecil.sln" WorkingDirectory="$(_TopDir)\external\cecil" />
+    <Exec Command="$(_NuGet) restore external\xamarin-android-tools\Xamarin.Android.Tools.sln" WorkingDirectory="$(_TopDir)" />
+    <MSBuild Projects="$(_TopDir)\external\xamarin-android-tools\Xamarin.Android.Tools.sln" />
+    <MSBuild Projects="$(MSBuildThisFileDirectory)..\..\build-tools\Java.Interop.BootstrapTasks\Java.Interop.BootstrapTasks.csproj" />
+    <MakeDir Directories="$(_NuGetPath)" />
     <Exec Command="$(_NuGet) restore Java.Interop.sln" WorkingDirectory="$(_TopDir)" />
     <JdkInfo
         JdksRoot="$(ProgramFiles)\Java"
