--- a/build-tools/scripts/jdk.targets
+++ b/build-tools/scripts/jdk.targets
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildThisFileDirectory)..\tasks\JdkInfo.targets" />
+
   <UsingTask  TaskName="Java.Interop.BootstrapTasks.JdkInfo"  AssemblyFile="$(MSBuildThisFileDirectory)..\..\bin\Build$(Configuration)\Java.Interop.BootstrapTasks.dll" />
   <Target Name="GetPreferredJdkRoot">
     <JdkInfo
